--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -10,13 +10,9 @@ jobs:
   nix-check:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Install Nix
-        uses: cachix/install-nix-action@v22
+      - uses: actions/checkout@v5
+      - uses: cachix/install-nix-action@v31
         with:
-          nix_path: nixpkgs=channel:nixpkgs-unstable
-
-      - name: Run Nix Flake Check
-        run: nix flake check
+          github_access_token: ${{ secrets.GITHUB_TOKEN }}
+      - run: nix build
+      - run: nix flake check
