--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -14,5 +14,10 @@ jobs:
       - uses: cachix/install-nix-action@v31
         with:
           github_access_token: ${{ secrets.GITHUB_TOKEN }}
+      - uses: cachix/cachix-action@v14
+        with:
+          name: dhbw-ma-tinf23ai1-devops
+          authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
+
       - run: nix build
       - run: nix flake check
