--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -61,7 +61,7 @@ jobs:
           echo "SBOM generated successfully"
 
           echo "Scanning for vulnerabilities with grype..."
-          nix develop --command bash -c "grype docker-archive:$CONTAINER_TAR -o spdx-json=$REPORTS_DIR/cve.spdx.json"
+          nix develop --command bash -c "grype docker-archive:$CONTAINER_TAR -o cyclonedx-json=$REPORTS_DIR/cve.cyclonedx.json"
           echo "Vulnerability scan completed"
 
           echo "Verifying reports exist..."
@@ -76,7 +76,7 @@ jobs:
       - name: Attach Vulnerability Reports
         run: |
           nix develop --command cosign attach sbom --sbom ${{ env.REPORTS_DIR }}/sbom.spdx.json ${{ steps.image_name.outputs.IMAGE_WITH_TAG }}
-          nix develop --command cosign attach sbom --sbom ${{ env.REPORTS_DIR }}/cve.spdx.json ${{ steps.image_name.outputs.IMAGE_WITH_TAG }}
+          nix develop --command cosign attach sbom --sbom ${{ env.REPORTS_DIR }}/cve.cyclonedx.json ${{ steps.image_name.outputs.IMAGE_WITH_TAG }}
 
       - name: Sign container
         run: nix develop --command nu ci/sign.nu ${{ steps.image_name.outputs.IMAGE_WITH_TAG }}
