--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -17,7 +17,7 @@ jobs:
       - uses: cachix/cachix-action@v14
         with:
           name: dhbw-ma-tinf23ai1-devops
-          authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
+          authToken: ${{ secrets.CACHIX_AUTH_TOKEN }}
 
       - run: nix build
       - run: nix flake check
