--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,11 @@ path = "src/lib.rs"
 
 [dependencies]
 actix-web = "4.4"
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+
+serde_json = "1.0"
 
 [dev-dependencies]
 actix-web = { version = "4.4", features = ["macros"] }
+serde_json = "1.0"
