--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -25,13 +25,13 @@ spec:
               protocol: TCP
           livenessProbe:
             httpGet:
-              path: /
+              path: /health/live
               port: http
             initialDelaySeconds: 5
             periodSeconds: 10
           readinessProbe:
             httpGet:
-              path: /
+              path: /health/ready
               port: http
             initialDelaySeconds: 5
             periodSeconds: 5
