--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -19,6 +19,9 @@ spec:
         - name: deppops
           image: ghcr.io/lucascherzer/deppops/deppops@sha256:12bb6f21b68df3574aeeca192eab43e9f18eb303641d383caa7c787323fb9ebb
           imagePullPolicy: IfNotPresent
+          env:
+            - name: RUST_LOG
+              value: trace
           ports:
             - name: http
               containerPort: 8080
