--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,6 +18,12 @@ jobs:
       - uses: cachix/install-nix-action@v31
         with:
           github_access_token: ${{ secrets.GITHUB_TOKEN }}
+
+      - uses: cachix/cachix-action@v14
+        with:
+          name: dhbw-ma-tinf23ai1-devops
+          authToken: ${{ secrets.CACHIX_AUTH_TOKEN }}
+
       - name: Build container
         run: nix build .#container
 
